[project]
name = "acm-rag-content"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightspeed-rag-content",
    "pyyaml==6.0.2",
    "llama-index-core",
]

[tool.uv.sources]
lightspeed-rag-content = { git = "https://github.com/lightspeed-core/rag-content" }
